MDEV-35768 Vector key is not used upon selecting from views / subqueries